RESOLVED FIXED96537
Regression(r128338): Broke Windows build
https://bugs.webkit.org/show_bug.cgi?id=96537
Summary Regression(r128338): Broke Windows build
Chris Dumez
Reported 2012-09-12 11:40:26 PDT
r128338 broke Apple-Win build: 9>..\InjectedBundle\TestRunner.cpp(337) : error C2057: expected constant expression 9>..\InjectedBundle\TestRunner.cpp(337) : error C2466: cannot allocate an array of constant size 0 9>..\InjectedBundle\TestRunner.cpp(337) : error C2133: 'jsStringsArray' : unknown size
Attachments
Patch (1.68 KB, patch)
2012-09-12 11:43 PDT, Chris Dumez
no flags
Patch (1.88 KB, patch)
2012-09-12 11:52 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-09-12 11:43:22 PDT
Chris Dumez
Comment 2 2012-09-12 11:52:43 PDT
Created attachment 163665 [details] Patch Use OwnArrayPtr.
WebKit Review Bot
Comment 3 2012-09-12 12:25:30 PDT
Comment on attachment 163665 [details] Patch Clearing flags on attachment: 163665 Committed r128349: <http://trac.webkit.org/changeset/128349>
WebKit Review Bot
Comment 4 2012-09-12 12:25:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.