Regression(r128338): Broke Windows build https://bugs.webkit.org/show_bug.cgi?id=96537

Unreviewed build fix.

Fix Apple-Win build by allocating array dynamically
since its size is not constant.

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-12

* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::stringArrayToJS):

Canonical link: https://commits.webkit.org/114435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128349 268f45cc-cd09-0410-ab3c-d52691b4dbfc