Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp
@@ -46,6 +46,8 @@
 #include <WebKit2/WebKit2_C.h>
 #include <wtf/CurrentTime.h>
 #include <wtf/HashMap.h>
+#include <wtf/OwnArrayPtr.h>
+#include <wtf/PassOwnArrayPtr.h>
 #include <wtf/text/StringBuilder.h>
 
 #if ENABLE(WEB_INTENTS)
@@ -334,14 +336,14 @@ static inline JSValueRef stringArrayToJS(JSContextRef context, WKArrayRef string
 {
     const size_t count = WKArrayGetSize(strings);
 
-    JSValueRef jsStringsArray[count];
+    OwnArrayPtr<JSValueRef> jsStringsArray = adoptArrayPtr(new JSValueRef[count]);
     for (size_t i = 0; i < count; ++i) {
         WKStringRef stringRef = static_cast<WKStringRef>(WKArrayGetItemAtIndex(strings, i));
         JSRetainPtr<JSStringRef> stringJS = toJS(stringRef);
         jsStringsArray[i] = JSValueMakeString(context, stringJS.get());
     }
 
-    return JSObjectMakeArray(context, count, jsStringsArray, 0);
+    return JSObjectMakeArray(context, count, jsStringsArray.get(), 0);
 }
 
 JSValueRef TestRunner::originsWithApplicationCache()
